# certamen

./: .dockerignore  .env.example  .gitignore  .importlinter  .markdownlint.yml  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  .treemapperignore  .yamllint  ANALYSIS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRECTNESS.md  DESIGN.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  NOTICE  QA.md  README.md  SECURITY.md  certamen_knowledge.db  config.example.yml  config.qa.yml  docker-compose.yml  mkdocs.yml  nginx.conf  pyproject.toml  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github-framework/: dependabot.yml
.github-framework/workflows/: automerge.yml  cd.yml  ci.yml  docker.yml  security.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: automerge.yml  cd.yml  ci.yml  diff-context.yml  docker.yml  security.yml
benchmarks/: README.md  ablation_benchmark.py  config.ablation.claude_only.yml  config.ablation.gemini_only.yml  config.ablation.gpt_only.yml  config.micro_benchmark.yml  config.strategy_benchmark.yml  micro_benchmark.py  standard_benchmarks.py  stats.py
benchmarks/reports/: DATASET_VERSIONS.md  PUBLICATION_CHECKLIST.md  RESEARCH_ACTION_PLAN.md  RESULTS.md  paper_draft.md  paper_outline.md  preregistration.md  results_template.md
docs/: README.md  authentication.md  calculator.html  index.md  try-it-now.md  web_auth_audit_2025.md
docs-site/: mkdocs.yml
examples/: INTERACTIVE_DEMO.md  README.md  benchmark_comparison.py  interactive_demo.ipynb  quickstart.py  single_model.py  tournament_basic.py  tournament_with_kb.py
examples/workflows/: chain-of-thought.yml  diamond-tournament.yml  hello-world.yml  knowledge-bank.yml  multi-model-comparison.yml  prompt-template.yml  tournament-elimination.yml
frontend/: README.md  biome.json  eslint.config.js  index.html  knip.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: Canvas.tsx  ColoredSmartEdge.tsx  ErrorToast.tsx  PropertiesPanel.tsx  Sidebar.tsx  Toolbar.tsx  TournamentView.tsx
frontend/src/components/forms/: ArrayField.tsx  BooleanField.tsx  FormField.tsx  NumberField.tsx  SelectField.tsx  StringField.tsx  index.ts
frontend/src/components/ui/: button.tsx
frontend/src/constants/: README.md  index.ts  nodeTypes.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: logger.ts  version.ts
frontend/src/nodes/: BaseNode.tsx  TextNodeBody.tsx
frontend/src/store/: workflowStore.test.ts  workflowStore.ts
frontend/src/types/: enums.ts  index.ts
frontend/src/utils/: colors.ts  errorMessages.ts  formatting.ts  index.ts  validation.ts
frontend/tests/e2e/: app.spec.ts
scripts/: discover_ollama_models.py  lint_structure.py
scripts/db/: README.md  init_auth_db.py  init_auth_db.sql
src/arbitrium_core/: __about__.py  __init__.py  engine.py  public.py
src/arbitrium_core/application/: bootstrap.py
src/arbitrium_core/application/execution/: __init__.py  async_executor.py  executor.py  sync_executor.py
src/arbitrium_core/application/serialization/: __init__.py
src/arbitrium_core/application/workflow/: __init__.py  registry.py  schema.py
src/arbitrium_core/domain/: __init__.py  errors.py  model_selection.py
src/arbitrium_core/domain/knowledge/: __init__.py  bank.py
src/arbitrium_core/domain/prompts/: __init__.py  builder.py  formatter.py  templates.py
src/arbitrium_core/domain/reporting/: __init__.py  provenance.py
src/arbitrium_core/ports/: __init__.py  llm.py  similarity.py
src/arbitrium_core/shared/: __init__.py  constants.py  errors.py  json_utils.py  statistics.py  terminal.py
src/certamen/: __about__.py  __init__.py  certamen.py  engine.py  public.py
src/certamen/api/: __init__.py  schemas.py
src/certamen/application/: bootstrap.py  slim_loader.py
src/certamen/cli/: args.py  main.py
src/certamen/config/: __init__.py  defaults.py  env_utils.py  loader.py
src/certamen/domain/: __init__.py  errors.py
src/certamen/interfaces/cli/: ui.py  (+4 more)
src/certamen/logging/: __init__.py  setup.py  structured.py
src/certamen/models/: __init__.py  base.py  cache.py  factory.py  litellm.py  providers.py  registry.py  retry.py
src/certamen/ports/: __init__.py  cache.py  llm.py  secrets.py  serializer.py  tournament.py
src/certamen/serialization/: __init__.py  yaml_loader.py
src/certamen/shared/: __init__.py  constants.py  errors.py  mapping_utils.py  statistics.py  terminal.py
src/certamen/utils/: __init__.py  async_.py  constants.py  context_validation.py  display.py  exceptions.py  file.py  json_.py  markdown.py  provenance.py  response_validation.py  secrets.py  terminal.py
src/certamen/web/: __init__.py  event_bridge.py  server.py  websocket_utils.py
src/certamen/workflows/: __init__.py  diamond-tournament.yml  registry.py
src/certamen_core/: engine.py
src/certamen_core/application/: bootstrap.py
src/certamen_core/shared/: constants.py
tests/: conftest.py
tests/fixtures/: models.py
tests/integration/: conftest.py  test_confidence_parser.py  test_disagreement_detector.py  test_disagreement_resolver.py  test_e2e_anonymizer.py  test_e2e_cli.py  test_e2e_config.py  test_e2e_cost_estimate.py  test_e2e_error_handling.py  test_e2e_factory.py  test_e2e_failures.py  test_e2e_judge_mode.py  test_e2e_knowledge_bank.py  test_e2e_markdown.py  test_e2e_reports.py  test_e2e_scorer.py  test_e2e_simple.py  test_e2e_slim_config.py  test_e2e_tournament.py  test_e2e_tournament_advanced.py  test_e2e_tournament_pipeline.py  test_e2e_utils.py  test_executor_gaps.py  test_helpers.py  test_import_smoke.py  test_interrogator.py  test_judge_fallback.py  test_judge_normalization.py  test_kb_quick_validation.py  test_knowledge_map_builder.py  test_knowledge_map_renderer.py  test_outputs_dir.py  test_persistent_knowledge_store.py  test_prompt_system.py  test_provenance_generation.py  test_real_llm_smoke.py  test_review_gaps.py
tests/unit/: test_cli_no_color.py  test_cli_question_file.py
(+201 files in other folders)
